fix: make more contrast for light theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
   --color-bg: #f6f8fa;
   --color-border: #d0d7de;
   --color-canvas: #ffffff;
-  --accent-color: #ed003b;
+  --accent-color: #E00000;
   --default-delay: 0.1s;
 }
 
